traffic-split/httproute-traffic-split.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-headers
spec: 
  parentRefs:
    - name: eg
  hostnames:
    - backends.example
  rules:
    - matches:  
      - path:
          type: PathPrefix
          value: /
      backendRefs:
       - group: ""
         kind: Service
         name: backend
         port: 3000
       - group: ""
         kind: Service
         name: backend-2
         port: 3000
